tests/fail/test-invalid-args.rs
// Copyright (C) 2025 Daniel Mueller <deso@posteo.net>
// SPDX-License-Identifier: (Apache-2.0 OR MIT)

/// Unsupported inner attribute.
#[test_fork::test(inner_test)]
fn invalid_args() {}

fn main() {}
